Fix reference counting problems with GLib.Variant.new_tuple()

Always sink the results of g_variant_new_tuple() in the statically
bound wrapper. This matches the generic GI marshalling behavior
of passing GVariants to Python with transfer-none.

https://bugzilla.gnome.org/show_bug.cgi?id=735166